--- a/Source/Properties/Resources.resx
+++ b/Source/Properties/Resources.resx
@@ -118,62 +118,47 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="6a38724140f67412cc7172f30df367f42" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6a38724140f67412cc7172f30df367f42.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="7581538_product_refund_return_service_product recall_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\7581538_product_refund_return_service_product recall_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="hinh-nen-ngau-44" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hinh-nen-ngau-44.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="b46d0d4adf7cecfb9b7633fc3e096714" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\b46d0d4adf7cecfb9b7633fc3e096714.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="5282541_fb_social media_facebook_facebook logo_social network_icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\5282541_fb_social media_facebook_facebook logo_social network_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="4714992_avatar_man_people_person_profile_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4714992_avatar_man_people_person_profile_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="8324223_ui_essential_app_avatar_profile_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\8324223_ui_essential_app_avatar_profile_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="3521345_basket_cart_shop_shopping_icon (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3521345_basket_cart_shop_shopping_icon (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="6a38724140f67412cc7172f30df367f41" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6a38724140f67412cc7172f30df367f41.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="circle" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="2533010_avatar_character_halloween_skeleton_skull_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2533010_avatar_character_halloween_skeleton_skull_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="4552616_glass_loupe_magnifier_magnifying_magnifying glass_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\4552616_glass_loupe_magnifier_magnifying_magnifying glass_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="6a38724140f67412cc7172f30df367f4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6a38724140f67412cc7172f30df367f4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="2533010_avatar_character_halloween_skeleton_skull_icon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2533010_avatar_character_halloween_skeleton_skull_icon (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="134146_mail_email_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\134146_mail_email_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="462537943_1082668596824276_4792925063775631168_n" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\462537943_1082668596824276_4792925063775631168_n.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="3521345_basket_cart_shop_shopping_icon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3521345_basket_cart_shop_shopping_icon (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="61bd063ab469c8234e0510991582a335" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\61bd063ab469c8234e0510991582a335.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bell" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bell.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="circle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="1695635068266-COOLMATE-FULL-LOGO---BLACK-(2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1695635068266-COOLMATE-FULL-LOGO---BLACK-(2).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="3521345_basket_cart_shop_shopping_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3521345_basket_cart_shop_shopping_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="5282541_fb_social media_facebook_facebook logo_social network_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\5282541_fb_social media_facebook_facebook logo_social network_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="hinh-nen-ngau-96" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hinh-nen-ngau-96.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="hinh-nen-ngau-6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hinh-nen-ngau-6.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="5305172_tweet_twitter_twitter logo_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\5305172_tweet_twitter_twitter logo_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3521345_basket_cart_shop_shopping_icon (2)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3521345_basket_cart_shop_shopping_icon (2)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="7581538_product_refund_return_service_product recall_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\7581538_product_refund_return_service_product recall_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="2533010_avatar_character_halloween_skeleton_skull_icon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2533010_avatar_character_halloween_skeleton_skull_icon (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="352473_return_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\352473_return_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,22 +166,76 @@
   <data name="45506_box_delivery_package_product_shipment_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\45506_box_delivery_package_product_shipment_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="3521345_basket_cart_shop_shopping_icon (2)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3521345_basket_cart_shop_shopping_icon (2)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="1695635068266-COOLMATE-FULL-LOGO---BLACK-(2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1695635068266-COOLMATE-FULL-LOGO---BLACK-(2).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="03ebd625cc0b9d636256ecc44c0ea324" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\03ebd625cc0b9d636256ecc44c0ea324.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="profile_3135715 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\profile_3135715 (1)2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="8324223_ui_essential_app_avatar_profile_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8324223_ui_essential_app_avatar_profile_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="3521345_basket_cart_shop_shopping_icon (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3521345_basket_cart_shop_shopping_icon (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="6a38724140f67412cc7172f30df367f41" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6a38724140f67412cc7172f30df367f41.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="7044033_zalo_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\7044033_zalo_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3521345_basket_cart_shop_shopping_icon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3521345_basket_cart_shop_shopping_icon (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="4552616_glass_loupe_magnifier_magnifying_magnifying glass_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\4552616_glass_loupe_magnifier_magnifying_magnifying glass_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="6a38724140f67412cc7172f30df367f42" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6a38724140f67412cc7172f30df367f42.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hinh-nen-ngau-44" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hinh-nen-ngau-44.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="9025852_phone_call_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\9025852_phone_call_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="images" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\images.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hinh-nen-ngau-6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hinh-nen-ngau-6.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="images_coolmate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images_coolmate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="images" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\images.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bell" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bell.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3521345_basket_cart_shop_shopping_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3521345_basket_cart_shop_shopping_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imagesHome" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imagesHome.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="b46d0d4adf7cecfb9b7633fc3e096714" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\b46d0d4adf7cecfb9b7633fc3e096714.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="6a38724140f67412cc7172f30df367f4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6a38724140f67412cc7172f30df367f4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="79ffab36b98533992b2ae78a13fed07a" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\79ffab36b98533992b2ae78a13fed07a.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="profile_3135715 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\profile_3135715 (1)2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="capybara3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\capybara3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="2533010_avatar_character_halloween_skeleton_skull_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2533010_avatar_character_halloween_skeleton_skull_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="6b35aca8cfaeca3ac75b88a99eee1b18" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6b35aca8cfaeca3ac75b88a99eee1b18.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="58928c362c80f405cce3f8ac2981d81f" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\58928c362c80f405cce3f8ac2981d81f.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
